# screenshot-manager

./: .gitignore  CLAUDE.md  Taskfile.yml  index.html  package-lock.json  package.json  tsconfig.app.json  vite.config.ts
.claude/: plan.md
backend/: alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 0001_init.py
backend/app/: config.py  database.py  main.py  models.py
backend/app/routers/: images.py  settings.py
src/: App.tsx  index.css
src/components/: DeleteConfirmDialog.tsx  FolderSetup.tsx  ImageCard.tsx  ImageGrid.tsx  ImagePreview.tsx
src/hooks/: useImages.ts  useSettings.ts
src/lib/: api.ts
src/types/: index.ts
